# helmet

./: .gitignore  README.MD  README.md  gpt.py  llmex_genai.ipynb  main-bert.py  main-gpt.py  main.py  pyproject.toml  requirements.txt
client/src/pages/: index.js
docs/: get_started.md
examples/: llmex_genai.ipynb  main-gpt base.py  qa-bert [WIP].py  qa-gen.py
examples/notebooks/: inseq_gpt.ipynb  llmex_genai.ipynb
llmex/: __init__.py  baseLLM.py  baseLM.py  compare.py  enc_dec_lm.py  enc_lm.py  explanation.py  hookedTransformer.py  llm.py  main-2.py  services.py  updater.py
llmex/archive/: enc_dec_lm.py  enc_lm.py  main-bert.py  qa-roberta.py
llmex/archive/tasks/: fillmask.py  (+2 more)
llmex/explainers/: gradients.py  perturbation.py
llmex/model/: base_lm.py  dec_lm.py
llmex/models/: __init__.py  base_lm.py  dec_lm.py  enc_dec_lm.py  enc_lm.py
llmex/server/: server.py  session.py
llmex/session/: session.py
llmex/tasks/: __init__.py  classification.py  generation.py
llmex/utils/: types.py  typing.py  utils.py
llmex/xai_techniques/: attribution.py
notebooks/: Roberta_Q&A.ipynb  ecco_gpt.ipynb  inseq.ipynb  test.ipynb
server/: app.js  package.json
src/helmet/: __init__.py  updater.py
use-cases/: qa-bert [WIP].py  qa-gpt2.py  qa-t5.py
webapp/: README.md  docker-compose.yml
webapp/api/: app.js  cloudbuild.yaml  defaultValues.js  state.js
webapp/client/: Dockerfile  next.config.js  package.json  tailwind.config.js
xai-platform/: docker-compose.yml
xai-platform/api/: .env.sample  Dockerfile  app.js  app.mjs  package.json
xai-platform/client/: package.json  tailwind.config.js
(+125 files in other folders)
