[tool.poetry]
name = "llmex"
version = "0.1.0"
description = ""
authors = ["Jeroen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
langchain = "^0.0.347"
bs4 = "^0.0.1"
numpy = "^1.26.2"
transformers = "^4.35.2"
captum = "^0.7.0"
accelerate = "^0.25.0"
trulens = "^0.13.4"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
