[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "helmet"
version = "0.1.1"
description = ""
authors = [
  { name = "Jeroen Nelen", email = "jnelen@elsevier.com" },
]
readme = "README.md"


[tool.poetry]
name = "helmet"
version = "0.1.1"
description = ""
authors = ["Jeroen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
bs4 = "^0.0.1"
numpy = "^1.26.2"
transformers = "^4.35.2"
captum = "^0.7.0"
accelerate = "^0.25.0"
trulens = "^0.13.4"
bitsandbytes = "^0.42.0"
dacite = "^1.8.1"
datasets = "^2.18.0"